--- a/weather/LCScrollController.xib
+++ b/weather/LCScrollController.xib
@@ -33,7 +33,7 @@
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <view alpha="0.0" contentMode="scaleToFill" id="Xro-TV-ItH" userLabel="shadow">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="568"/>
